--- a/src/css/pages/command.css
+++ b/src/css/pages/command.css
@@ -2,19 +2,28 @@
   Command Menu
 ***/
 
-.command-page {
-  margin-top: 48px;
+.command-row {
+  height: 50px;
+  display: flex;
+  align-items: center;
+
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.command-row .cross {
+  margin-right: 60px;
 }
 
 input.command-menu-input, .command-input-placeholder-wrapper {
   position: relative;
   border: none;
   outline: none;
-  height: 60px;
+  height: 50px;
   width: 100%;
 
   font-size: 20px;
-  line-height: 60px;
+  line-height: 50px;
   font-family: "Source Code Pro", "Roboto mono", "Courier New", monospace;
 }
 
